--- a/src/AVOne.Server/_Imports.razor
+++ b/src/AVOne.Server/_Imports.razor
@@ -7,4 +7,4 @@
 @using System.Diagnostics.CodeAnalysis
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Routing
-@using Masa.Blazor.Presets
+@using Masa.Blazor.Presets;
