--- a/src/AVOne.Server/Pages/App/Downloads/TaskNavItem.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/TaskNavItem.razor
@@ -29,11 +29,11 @@
     {
         InvokeAsync(() =>
         {
-               if(Navigation.Uri != url)
-                {
-                    url = Navigation.Uri;
-                    StateHasChanged();
-                }
+            if (Navigation.Uri != url)
+            {
+                url = Navigation.Uri;
+                StateHasChanged();
+            }
         });
     }
 
@@ -41,7 +41,7 @@
     public string? Tag { get; set; }
 
     [Parameter]
-    public int? Status { get; set; }
+    public string? Status { get; set; }
 
     [Parameter]
     public string Icon { get; set; }
@@ -52,7 +52,39 @@
     [Parameter]
     public string Title { get; set; }
 
-    private string Href => string.IsNullOrEmpty(Tag) ? Navigation.GetUriWithQueryParameter("Status", Status) : Navigation.GetUriWithQueryParameter("Tag", Tag);
+    private string Href
+    {
+        get
+        {
+            if (string.IsNullOrEmpty(Tag))
+            {
+                return Navigation.GetUriWithQueryParameter("Status", Status);
+            }
+            else
+            {
+                var uriBuilder = new UriBuilder(Navigation.Uri);
+                var q = System.Web.HttpUtility.ParseQueryString(uriBuilder.Query);
+                var status = q["Status"];
+                var tag = q["Tag"];
+                if (!string.IsNullOrEmpty(tag) && tag == Tag)
+                {
+                    return Navigation.GetUriWithQueryParameters(new Dictionary<string, object?>
+                    {
+                        {"Status",status},
+                        { "Tag", null }
+                    });
+                }
+                else
+                {
+                    return Navigation.GetUriWithQueryParameters(new Dictionary<string, object?>
+                    {
+                        {"Status",status},
+                        { "Tag", Tag }
+                    });
+                }
+            }
+        }
+    }
 
     private bool IsActive()
     {
@@ -62,12 +94,12 @@
         {
             return false;
         }
-        if (Status is not null && Status.HasValue)
+        if (!string.IsNullOrEmpty(Status))
         {
             string? status = q["Status"];
             if (!string.IsNullOrEmpty(status))
             {
-                if(int.Parse(status) == Status.Value!)
+                if (status == Status)
                 {
                     return true;
                 }
@@ -75,17 +107,14 @@
         }
         if (!string.IsNullOrEmpty(Tag))
         {
-            string? tag = q["Tag"];
-            if (!string.IsNullOrEmpty(tag))
+            string[]? tag = q.GetValues("Tag");
+            if (tag?.Any(e => e == Tag) ?? false)
             {
-                if( tag == Tag!)
-                {
-                    return true;
-                }
+                return true;
             }
         }
 
-        if ((Status is null || !Status.HasValue) && string.IsNullOrEmpty(Tag))
+        if (string.IsNullOrEmpty(Status) && string.IsNullOrEmpty(Tag))
         {
             return string.IsNullOrEmpty(q["Status"]) && string.IsNullOrEmpty(q["Tag"]);
         }
