--- a/src/AVOne.Server/Pages/App/Downloads/TaskNav.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/TaskNav.razor
@@ -1,6 +1,7 @@
 ﻿@using AVOne.Impl.Job;
 @using AVOne.Models.Download;
 @using AVOne.Providers;
+@using AVOne.Configuration;
 @inherits ProCompontentBase
 <MNavigationDrawer Permanent Class="rounded-4" Width="300" Style="overflow: visible;">
      <MSnackbar @bind-Value="_snackbar">
@@ -63,6 +64,15 @@
 </MNavigationDrawer>
 
 @code {
+    [Inject]
+    private NavigationManager Navigation { get; set; }
+    [Inject]
+    private IConfigurationManager ConfigurationManager { get; set; }
+    [Inject]
+    public IProviderManager ProviderManager { get; set; }
+
+    [Inject]
+    public IJobManager JobManager { get; set; }
     bool addTaskDialog;
     class AddJobModel
     {
@@ -81,11 +91,7 @@
                 await this.AddDownloadJob(_addJobModel);              
         });
     }
-    [Inject]
-    public IProviderManager ProviderManager { get; set; }
 
-    [Inject]
-    public IJobManager JobManager { get; set; }
     private async Task AddDownloadJob(AddJobModel addJobModel)
     {
         var jobItems = ProviderManager.GetMediaExtractorProviders(addJobModel.Url!);
@@ -105,11 +111,14 @@
             ShowSnackbarLocal("Download.Tasks.Message.AddTaskFailed", addJobModel.Url!,failedReason);
             return;
         }
-        var opt = new DownloadOpts { ThreadCount = 4, OutputDir = "D:\\tmp", RetryCount = 1, RetryWait = 500 };
+        var downloadDir = ConfigurationManager.CommonConfiguration.DownloadConfig.DefaultDownloadDir;
+        var threadCount = ConfigurationManager.CommonConfiguration.DownloadConfig.DefaultDownloadThreadCount;
+        var opt = new DownloadOpts { ThreadCount = 4, OutputDir = downloadDir, RetryCount = 1, RetryWait = 500 };
         var downloadJob = new DownloadAVJob();
         downloadJob.DownloadableItem = jobItem;
         downloadJob.DownloadOpts = opt;
         JobManager.AddJob(downloadJob);
         JobManager.ExecuteJob(downloadJob);
+        Navigation.NavigateTo(GlobalVariables.DefaultRoute,true);   
     }
 }
