--- a/src/AVOne.Server/Pages/App/Downloads/Tasks.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/Tasks.razor
@@ -165,7 +165,7 @@
         {
             speed = long.Parse(speedStr.ToString());
         }
-        return DownloadProgressEventArgs.FormatFileSize(speed);
+        return $"{DownloadProgressEventArgs.FormatFileSize(speed)}/s";
     }
 
     public string Eta(JobModel jobModel)
