--- a/src/AVOne.Server/_Imports.razor
+++ b/src/AVOne.Server/_Imports.razor
@@ -4,6 +4,7 @@
 @using AVOne.Server.Global
 @using AVOne.Server.Data
 @using AVOne.Server.Shared
+@using AVOne.Server.Data.Base
 @using System.Diagnostics.CodeAnalysis
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Routing
