fix http client names

--- a/src/AVOne.Server/Pages/App/Downloads/Tasks.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/Tasks.razor
@@ -30,21 +30,21 @@
                                     <MListItem Link OnClick=ResetSort>
                                         <MListItemContent>
                                             <MListItemTitle>
-                                                Reset Sort
+                                                @T("Download.Sort.ResetSort")
                                             </MListItemTitle>
                                         </MListItemContent>
                                     </MListItem>
                                     <MListItem Link OnClick=SortbyName>
                                         <MListItemContent>
                                             <MListItemTitle>
-                                                Sort By Name
+                                                @T("Download.Sort.SortbyName")
                                             </MListItemTitle>
                                         </MListItemContent>
                                     </MListItem>
                                     <MListItem Link OnClick=SortbyCreatedDate>
                                         <MListItemContent>
                                             <MListItemTitle>
-                                                Sort Created Date
+                                                @T("Download.Sort.SortbyCreatedDate")
                                             </MListItemTitle>
                                         </MListItemContent>
                                     </MListItem>
