--- a/src/AVOne.Server/Pages/App/Downloads/TaskNav.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/TaskNav.razor
@@ -2,18 +2,9 @@
 @using AVOne.Models.Download;
 @using AVOne.Providers;
 @using AVOne.Configuration;
+@using Furion.TaskQueue;
 @inherits ProCompontentBase
 <MNavigationDrawer Permanent Class="rounded-4" Width="300" Style="overflow: visible;">
-     <MSnackbar @bind-Value="_snackbar">
-        <ChildContent>
-            @_snackbarMessage
-        </ChildContent>
-        <ActionContent>
-            <MButton Color="pink" Text OnClick="() => _snackbar = false">
-                Close
-            </MButton>
-        </ActionContent>
-    </MSnackbar>
     <MDialog @bind-Value="addTaskDialog"
              Width="500">
         <ActivatorContent>
@@ -44,7 +35,7 @@
             </MCard>
 
         </ChildContent>
-        
+
     </MDialog>
 
     <MList Linkage Dense Class="remover-ripple">
@@ -58,28 +49,32 @@
             <MSubheader Class="px-6 my-6 text-subtitle neutral-lighten-4--text">Tags</MSubheader>
             @* <MIcon Class="px-6 my-6" Small Color="#A3AED0">fas fa-plus</MIcon> *@
         </MRow>
-            <TaskNavItem Tag="Censored" Icon="fas fa-circle" IconColor="purple" Title="Download.Tags.Censored"></TaskNavItem>
-            <TaskNavItem Tag="Uncensored" Icon="fas fa-circle" IconColor="#05CD99" Title="Download.Tags.Uncensored"></TaskNavItem>
-            <TaskNavItem Tag="Chinese" Icon="fas fa-circle" IconColor="#FFB547" Title="Download.Tags.Chinese"></TaskNavItem>
-            <TaskNavItem Tag="ChineseSub" Icon="fas fa-circle" IconColor="warn" Title="Download.Tags.ChineseSub"></TaskNavItem>
-            <TaskNavItem Tag="Taiwanese" Icon="fas fa-circle" IconColor="#FF5252" Title="Download.Tags.Taiwanese"></TaskNavItem>
-            <TaskNavItem Tag="Japanese" Icon="fas fa-circle" IconColor="#4318FF" Title="Download.Tags.Japanese"></TaskNavItem>    
-            <TaskNavItem Tag="Catoon" Icon="fas fa-circle" IconColor="#05CD99" Title="Download.Tags.Catoon"></TaskNavItem>
-            <TaskNavItem Tag="US" Icon="fas fa-circle" IconColor="#FFB547" Title="Download.Tags.US"></TaskNavItem>
-            <TaskNavItem Tag="Other" Icon="fas fa-circle" IconColor="cyan" Title="Download.Tags.Other"></TaskNavItem>
-    </MList>
-</MNavigationDrawer>
+        <TaskNavItem Tag="Censored" Icon="fas fa-circle" IconColor="purple" Title="Download.Tags.Censored"></TaskNavItem>
+        <TaskNavItem Tag="Uncensored" Icon="fas fa-circle" IconColor="#05CD99" Title="Download.Tags.Uncensored"></TaskNavItem>
+        <TaskNavItem Tag="Chinese" Icon="fas fa-circle" IconColor="#FFB547" Title="Download.Tags.Chinese"></TaskNavItem>
+        <TaskNavItem Tag="ChineseSub" Icon="fas fa-circle" IconColor="warn" Title="Download.Tags.ChineseSub"></TaskNavItem>
+        <TaskNavItem Tag="Taiwanese" Icon="fas fa-circle" IconColor="#FF5252" Title="Download.Tags.Taiwanese"></TaskNavItem>
+        <TaskNavItem Tag="Japanese" Icon="fas fa-circle" IconColor="#4318FF" Title="Download.Tags.Japanese"></TaskNavItem>
+        <TaskNavItem Tag="Catoon" Icon="fas fa-circle" IconColor="#05CD99" Title="Download.Tags.Catoon"></TaskNavItem>
+        <TaskNavItem Tag="US" Icon="fas fa-circle" IconColor="#FFB547" Title="Download.Tags.US"></TaskNavItem>
+        <TaskNavItem Tag="Other" Icon="fas fa-circle" IconColor="cyan" Title="Download.Tags.Other"></TaskNavItem>
+        </MList>
+        </MNavigationDrawer>
 
         @code {
+
     [Inject]
     private NavigationManager Navigation { get; set; }
+
     [Inject]
     private IConfigurationManager ConfigurationManager { get; set; }
+
     [Inject]
     public IProviderManager ProviderManager { get; set; }
 
     [Inject]
     public IJobManager JobManager { get; set; }
+
     bool addTaskDialog;
     class AddJobModel
     {
@@ -104,21 +99,23 @@
 
     private async Task HandleOnValidSubmit()
     {
-        await InvokeAsync(async ()=>{       
-                addTaskDialog = false;
-                StateHasChanged();
-                await this.AddDownloadJob(_addJobModel);              
+        await InvokeAsync(async () =>
+        {
+            addTaskDialog = false;
+            StateHasChanged();
+            await this.AddDownloadJob(_addJobModel);
         });
     }
 
     private async Task AddDownloadJob(AddJobModel addJobModel)
     {
+        this.ShowLoading("Download.Tasks.ExtractingMedia", false, 5000, addJobModel.Url!);
         var jobItems = ProviderManager.GetMediaExtractorProviders(addJobModel.Url!);
         var extractorProvider = jobItems.FirstOrDefault();
         if (extractorProvider is null)
         {
-            var failedReason = T("Download.Tasks.FailedReason.NoExtrator",addJobModel.Url!);
-            ShowSnackbarLocal("Download.Tasks.Message.AddTaskFailed", addJobModel.Url!,failedReason);
+            var failedReason = T("Download.Tasks.FailedReason.NoExtrator", addJobModel.Url!);
+            this.Error("Download.Tasks.Message.AddTaskFailed", addJobModel.Url!, failedReason);
             return;
         }
 
@@ -126,10 +123,11 @@
         var jobItem = item.FirstOrDefault();
         if (jobItem is null)
         {
-            var failedReason = T("Download.Tasks.FailedReason.GetDownloadItemFailed",addJobModel.Url!);
-            ShowSnackbarLocal("Download.Tasks.Message.AddTaskFailed", addJobModel.Url!,failedReason);
+            var failedReason = T("Download.Tasks.FailedReason.GetDownloadItemFailed", addJobModel.Url!);
+            this.Error("Download.Tasks.Message.AddTaskFailed", addJobModel.Url!, failedReason);
             return;
         }
+        this.CloseLoading();
         var downloadDir = ConfigurationManager.CommonConfiguration.DownloadConfig.DefaultDownloadDir;
         var threadCount = ConfigurationManager.CommonConfiguration.DownloadConfig.DefaultDownloadThreadCount;
         var opt = new DownloadOpts { ThreadCount = addJobModel.ThreadCount ?? 4, OutputDir = downloadDir, RetryCount = addJobModel.RetryCount ?? 1, RetryWait = 500 };
@@ -137,7 +135,7 @@
         downloadJob.DownloadableItem = jobItem;
         downloadJob.DownloadOpts = opt;
         JobManager.AddJob(downloadJob);
-        JobManager.ExecuteJob(downloadJob);
-        Navigation.NavigateTo(GlobalVariables.DefaultRoute,true);   
+        await JobManager.EnqueueJob(downloadJob);
+        Navigation.NavigateTo(GlobalVariables.DefaultRoute, true);
     }
 }
