--- a/src/AVOne.Server/Pages/_Layout.cshtml
+++ b/src/AVOne.Server/Pages/_Layout.cshtml
@@ -16,6 +16,7 @@
     <link href="css/material/icons.css" rel="stylesheet">
     <link href="css/fontawesome/v5.15.4/css/all.min.css" rel="stylesheet">
     <link href="css/masa-blazor-pro.css" rel="stylesheet" />
+    <link href="css/message.min.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 
@@ -24,6 +25,26 @@
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/BlazorComponent/js/blazor-component.js"></script>
     <script src="js/echarts/5.1.1/echarts.min.js"></script>
+    <script src="js/message.min.js"></script>
+    <script>
+        window.QMSG_GLOBALS = {
+            DEFAULTS: {
+                showClose: true,
+                timeout: 2000
+            }
+        }
+        window.QmsgShowLoading = function (message, autoClose, timeout) {
+            window.QmsgDefaultLoader = Qmsg.loading(message, {
+                autoClose: autoClose,
+                timeout:timeout
+            })
+        }
+
+        window.QmsgCloseLoading = function () {
+            window.QmsgDefaultLoader.close();
+        }
+
+    </script>
 </body>
 
 </html>
